--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,16 @@
 server:
   port: 80
-
 spring:
-  mvc:
-    view:
-      prefix: classpath:/templates/
-      suffix: .html
-    static-path-pattern: /static/**
+  freemarker:
+    template-loader-path: classpath:/templates
+    cache: false
+    charset: UTF-8
+    check-template-location: true
+    content-type: text/html
+    expose-request-attributes: true
+    expose-session-attributes: true
+    request-context-attribute: request
+    suffix: .html
+
   resources:
     static-locations: classpath:/static/
